[gd_scene load_steps=8 format=3 uid="uid://cyk6svblrkgqt"]

[ext_resource type="Script" uid="uid://f4ky0iela780" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Texture2D" uid="uid://cuabitbcii5ha" path="res://assets/textures/dev/grids/Orange/texture_05.png" id="2_g2els"]
[ext_resource type="Script" uid="uid://cinu2edvnp7b7" path="res://scenes/pivot_handler.gd" id="2_qhqgy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2els"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qhqgy"]
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qhqgy"]
albedo_texture = ExtResource("2_g2els")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3vyb7"]
material = SubResource("StandardMaterial3D_qhqgy")

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")
jump_velocity = 8.175
speed_walking = 5.0
speed_crouching = 3.0
speed_sprinting = 7.0
gravity_sens = 3.645
mouse_sens = 0.09
lerp_speed = 90.0
crouch_lerp_speed = 25.0

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_g2els")
debug_fill = false

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
shape = SubResource("CapsuleShape3D_qhqgy")
disabled = true
debug_fill = false

<<<<<<< HEAD
[node name="pivot_handler" type="Node3D" parent="."]
script = ExtResource("2_qhqgy")

=======
>>>>>>> parent of 1371abe (version 1.01)
[node name="pivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="pivot"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_3vyb7")

[node name="crouch_ray_cast" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)
<<<<<<< HEAD

[node name="jump_buffer_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
=======
>>>>>>> parent of 1371abe (version 1.01)
